[package]
name = "store"
version = "0.1.0"
edition = "2021"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.8.5"
borsh = "0.9.1"
thiserror = "*"
num-derive = "*"
num-traits = "*"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "=1.8.5"
solana-sdk = "=1.8.5"
# solana-validator = "=1.8.5"

[lib]
crate-type = ["cdylib", "lib"]
